Fix iframe dark mode transparency: pass theme via URL param, remove ineffective JS overrides, update ports to 4001, clean up CSS - dark bg issue remains under investigation

--- a/archive_hide/app/sponster_announcer_bottom_float_frame.scss
+++ b/archive_hide/app/sponster_announcer_bottom_float_frame.scss
@@ -11,7 +11,7 @@
 }
 
 body {
-  background-color: transparent;
+  background-color: transparent !important;
 }
 
 .sponster-announcer-bottom-float-strip {
@@ -159,7 +159,7 @@ body {
   width: 400px;
   margin-left: -200px;
   height: 100%;
-  background-color: transparent;
+  background-color: transparent !important;
   position: absolute;
   bottom: 0;
   left: 50%;
